# prompt-optimizer

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
.github/: copilot-instructions.md
docs/: foundry-local-plan.md
src/prompt_optimizer/: __init__.py  __main__.py  analyzer.py  azure_client.py  cli.py  client.py  config.py  history.py  local_client.py  optimizer.py  questioner.py  schemas.py  templates.py
tests/: test_analyzer.py  test_client.py  test_config.py  test_history.py  test_local_client.py  test_optimizer.py  test_questioner.py  test_schemas.py  test_templates.py
